--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,11 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Docker config
+README.md
+.prettierrc.json
+.eslintrc.yml
 
 # Dependencies
 /node_modules/
-/.pnp/
+/.pnp
 .pnp.js
 
 # Testing
