Add creating shopping list item

--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
     }
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "autobind-decorator": "^2.4.0",
     "axios": "^0.19.2",
+    "http-status-codes": "^1.4.0",
     "next": "^9.3.5",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "ts-keycode-enum": "^1.0.6"
   },
   "devDependencies": {
     "@types/node": "^13.13.1",
