--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,4 @@ yarn-debug.log*
 yarn-error.log*
 
 # Local env files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env*
