--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     }
   },
   "dependencies": {
+    "@ant-design/icons": "^4.1.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-decorators": "^7.8.3",
+    "antd": "^4.2.2",
     "autobind-decorator": "^2.4.0",
     "axios": "^0.19.2",
     "http-status-codes": "^1.4.0",
