--- a/.github/workflows/build-image-on-release.yml
+++ b/.github/workflows/build-image-on-release.yml
@@ -30,8 +30,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: docker/build-push-action@v1
         with:
+          registry: ${{ secrets.DOCKER_HOST }}
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: ${{ secrets.DOCKER_HOST }}
           tag_with_ref: true
           tag_with_sha: true
