--- a/.github/workflows/build-image-on-release.yml
+++ b/.github/workflows/build-image-on-release.yml
@@ -34,5 +34,7 @@ jobs:
           registry: ${{ secrets.DOCKER_HOST }}
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: meal-planner/app-service
           tag_with_ref: true
           tag_with_sha: true
+          add_git_labels: true
