--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ant-design/icons": "^4.1.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@zeit/next-source-maps": "^0.0.3",
     "antd": "^4.2.2",
     "autobind-decorator": "^2.4.0",
     "axios": "^0.19.2",
