--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.1.0",
+    "@auth0/nextjs-auth0": "^0.13.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-decorators": "^7.8.3",
     "@zeit/next-source-maps": "^0.0.3",
     "antd": "^4.2.2",
     "autobind-decorator": "^2.4.0",
     "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
     "helpful-decorators": "^2.0.6",
     "http-status-codes": "^1.4.0",
     "next": "^9.3.5",
