Add configuration for AUTH0_AUDIENCE

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,8 @@ AUTH0_DOMAIN=
 AUTH0_CLIENT_ID=
 AUTH0_CLIENT_SECRET=
 
-# Cookie secret for encrypting cookies (minimum of 32 characters)
+# Create Auth0 API with host domain and set it as audience
+AUTH0_AUDIENCE=
+
+# Cookie secret for encrypting cookies (random string of 32 characters)
 AUTH0_COOKIE_SECRET=""
