--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ AUTH0_CLIENT_ID=
 AUTH0_CLIENT_SECRET=
 
 # Create Auth0 API with host domain and set it as audience
-AUTH0_AUDIENCE=
+AUTH0_AUDIENCE=http://localhost:3000
 
 # Cookie secret for encrypting cookies (random string of 32 characters)
 AUTH0_COOKIE_SECRET=""
